# sfw

./: .cproject  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  build-mac-and-linux.sh  build.sh  configure.ac  package.sh  sfw-csharp.sln  sfw-mono.sln  sfw.sln  xbuild-osx-to-linux-64.sh
m4/: ax_cxx_compile_stdcxx.m4  libtool.patch
openpa/: .cproject  Makefile  openpa.sln  openpa.vcxproj  openpa.vcxproj.filters
sfw/: .cproject  Makefile  ReadMe.txt  sfw.cpp  sfw.vcxproj  sfw.vcxproj.filters  stdafx.cpp  stdafx.h
sfw.net/: Event.cs  EventType.cs  NativeInterface.cs  NativeInterfaceStatic.cs  sfw.net-mono.csproj  sfw.net.csproj
sfw.net.TestConsole/: App.config  Program.cs  sfw.net.TestConsole-mono.csproj  sfw.net.TestConsole.csproj
sfw.net.UnitTests/: UnitTest1.cs  sfw.net.UnitTests.csproj
sfw.net.UnitTests/Properties/: AssemblyInfo.cs
sfw.net/Properties/: AssemblyInfo.cs
sfw/includes/: Lock.h  NativeInterface.h  Queue.h  SFWExport.h  export_header.h  sfw.h  sfw_export_types.h  sfw_exports.h
sfw/includes/win32/: pthread.h
sfw/src/: Lock.cpp  NativeInterface.cpp  Queue.cpp  SFWExport.cpp
sfw/src/win32/: ReadLoop.cpp  ReadLoopRunner.cpp
src/: Makefile.am
src/bindings/: Makefile.am
src/bindings/sfw.net/: Event.cs  EventType.cs  Makefile  Makefile.am  NativeInterface.cs  NativeInterfaceStatic.cs  sfw.net.csproj
src/openpa/: .cproject  .project  Makefile.am  openpa.Makefile  openpa.sln  openpa.target.mk  openpa.vcxproj
src/openpa/src/: opa_primitives.c  opa_primitives.h  opa_queue.h
src/openpa/src/primitives/: opa_nt_intrinsics.h
src/sfw/: .cproject  .project  Makefile.am  sfw.vcxproj  sfw.vcxproj.filters
src/sfw/includes/: NativeInterface.h  Queue.h  SFWExport.h
src/sfw/src/: Lock.cpp  NativeInterface.cpp  Queue.cpp  SFWExport.cpp
src/sfw/src/linux/: InotifyEventLoop.cpp  InotifyService.cpp  InotifyTree.cpp
src/sfw/src/osx/: FSEventsService.cpp  RunLoop.cpp
src/sfw/src/win32/: ReadLoop.cpp  ReadLoopRunner.cpp
swf.net.TestConsole/: Program.cs  swf.net.TestConsole-mono.csproj  swf.net.TestConsole.csproj
swf.net.TestConsole/Properties/: AssemblyInfo.cs
test-console/: .cproject  .project  Makefile  stdafx.cpp  test-console.cpp  test-console.vcxproj
tests/: Makefile.am
tests/sfw.net.TestConsole/: App.config  Makefile  Makefile.am  Program.cs  sfw.net.TestConsole.csproj
tests/sfw.net.TestConsole/Properties/: AssemblyInfo.cs
tests/test-console/: Makefile.am  test-console.cpp  test-console.vcxproj  test-console.vcxproj.filters
